update to java module system, junit 5