@@ -31,17 +31,45 @@
         <jersey.version>2.29</jersey.version>
         <slf4j.version>2.0.0-alpha0</slf4j.version>
         <logback.version>1.3.0-alpha4</logback.version>
-        <guava.version>28.0-jre</guava.version>
         <lombok.version>1.18.8</lombok.version>
-        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
         <org.eclipselink.version>2.7.4</org.eclipselink.version>
-        <junit.version>5.5.1</junit.version>
+        <junit.version>5.5.1-SNAPSHOT</junit.version>
+        <junit.platform.version>1.5.1</junit.platform.version>
         <groovy.version>3.0.0-beta-2</groovy.version>
-        <commons.lang.version>3.9</commons.lang.version>
-        <commons.collections.version>4.3</commons.collections.version>
         <shiro.version>1.4.1</shiro.version>
         <hk2.version>2.5.0</hk2.version>
+        <guava.version>28.0-jre</guava.version>
+        <commons.lang.version>3.9</commons.lang.version>
+        <commons.collections.version>4.3</commons.collections.version>
 
+        <!-- module arguments for forked surefire vm, not sure how to obviate -->
+        <argLine>
+            --illegal-access=permit
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts=ALL-UNNAMED
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.hk2=ALL-UNNAMED
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.services=ALL-UNNAMED
+
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.model=org.eclipse.persistence.core
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.model=ALL-UNNAMED
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.model=com.fasterxml.jackson.databind
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.db=ALL-UNNAMED
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.db.cache=ALL-UNNAMED
+
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.api=java.naming
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.api=ALL-UNNAMED
+
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.resource=jersey.server
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.resource=ALL-UNNAMED
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.resource=hk2.locator
+            --add-opens=bank.rest.service.jersey/org.elcer.accounts.exceptions.mappers=hk2.locator
+
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.hk2=hk2.locator
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.services=hk2.locator
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.services.synchronizers=hk2.locator
+            --add-exports=bank.rest.service.jersey/org.elcer.accounts.db.cache=hk2.locator
+            --add-opens=java.base/jdk.internal.loader=org.apache.commons.lang3
+
+        </argLine>
     </properties>
 
     <profiles>
@@ -107,9 +135,8 @@
                 </dependency>
             </dependencies>
         </profile>
-
-
     </profiles>
+
 
     <dependencyManagement>
         <dependencies>
@@ -135,20 +162,29 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-jaxrs</artifactId>
             <version>${shiro.version}</version>
-        </dependency>
 
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>javax.ws.rs-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- EE spec-->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${javax.servlet-api.version}</version>
-        </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
+
         <!-- EE spec-->
 
 
@@ -170,27 +206,12 @@
             <version>${jersey.version}</version>
         </dependency>
 
-        <!-- needed for jersey, not sure how to disable JAXB classes scanning-->
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <!-- jersey -->
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
-
         <!-- orm -->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa</artifactId>
             <version>${org.eclipselink.version}</version>
         </dependency>
-
 
         <!-- logging -->
         <dependency>
@@ -216,7 +237,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.5.1</version>
+            <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -226,24 +247,26 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>1.5.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
             <type>pom</type>
             <scope>test</scope>
+
+            <exclusions>
+                <!-- to prevent surefire from selecting it as default test framework -->
+                <exclusion>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy-testng</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -267,6 +290,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- commons and guava-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -277,7 +301,22 @@
             <artifactId>commons-collections4</artifactId>
             <version>${commons.collections.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+        <!-- commons -->
 
+
+        <!-- needed for forked surefire vm -->
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit-platform</artifactId>
+            <version>2.22.2</version>
+        </dependency>
+
+        <!-- without this does not compile with lombok -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
@@ -290,7 +329,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.1.0</version>
                 <executions>
@@ -352,28 +390,10 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.version}</version>
-                    </dependency>
-                </dependencies>
-
-                <configuration>
-                    <excludes>
-                        <exclude/>
-                    </excludes>
-                    <reuseForks>false</reuseForks>
-                    <forkCount>0</forkCount>
-                </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>3.0.0-M2</version>
                 <executions>
@@ -407,7 +427,6 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
@@ -415,7 +434,9 @@
                     <target>${java.version}</target>
                     <compilerArgs>
                         <arg>-sourcepath</arg>
-                        <arg>${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/</arg>
+                        <arg>
+                            ${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/
+                        </arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
@@ -424,7 +445,6 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
-
                 </configuration>
             </plugin>
             <plugin>
@@ -440,27 +460,26 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                <version>3.1.1</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>attach-javadocs</id>-->
-<!--                        <goals>-->
-<!--                            <goal>jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <additionalOptions>-->
-<!--                        <additionalOption>-Xdoclint:none</additionalOption>-->
-<!--                    </additionalOptions>-->
-<!--                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <!-- 3.1.1. doesn't work -->
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <additionalOptions>
+                        <additionalOption>-Xdoclint:none</additionalOption>
+                    </additionalOptions>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.0.1</version>
                 <executions>
@@ -474,29 +493,8 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>org.elcer.accounts.App</mainClass>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -508,4 +506,16 @@
             </plugin>
         </plugins>
     </build>
+
+
+    <repositories>
+        <repository>
+            <id>jacoco</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
